--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "study rust"
 license = "MIT OR Apache-2.0"
 
 [profile.dev]
-opt-level = 1
+opt-level = 0
 
 [profile.release]
 opt-level = 3
@@ -17,4 +17,7 @@ opt-level = 3
 [dependencies]
 art = { version = "0.1.0", path = "art" }
 ferris-says = "0.2"
+ffmpeg = "0.3.0"
+ffmpeg-sys = "4.3.3"
 rand = "0.8.5"
+rusty-tesseract = "1.1.9"
